# alerta-contrib

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS  LICENSE  README.md  alerta-contrib.spec  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: github-ci.yml  tests.yml
alert-sqs/: alert-sqs.py  alert.py  settings.py  test-sqs.py
alerta-logger/: logger2.py
consumers/logger2/: logger.py
etc/: alerta.conf.example  supervisord.conf.example
integrations/: README.md
integrations/amazon-sqs/: README.md  example-sqs.py
integrations/cloudwatch/: cloudwatch.py  setup.py
integrations/consul/: README.md  consul-alerta.py  consul-heartbeat.py  consul_alerta.py  consul_heartbeat.py  consulalerta.py  consulheartbeat.py  setup.py
integrations/dynect/: dynmon.py
integrations/fail2ban/: README.md  alerta.conf  fail2ban-alerta.sh  jail.local
integrations/mailer/: README.md  email.html.tmpl  email.tmpl  mailer.py  requirements.txt  setup.py  test_rules.py
integrations/opsgenie/: README.md  oecAlertaExecutor.py
integrations/opsweekly/: README.md  alerta.php  test.php
integrations/pagerduty/: README.md  mailer.py  pagerduty.py  pdclientapi.py  tokens.py
integrations/pinger/: README.md  pinger.py  setup.py
integrations/snmptrap/: README.md  handler.py  setup.py
integrations/sqs-kombu/: settings.py
logger2/: settings.py
pinger/: pinger.py
plugins/: README.md
syslog/: setup.py  syslog.py
tests/: requirements.txt
urlmon/: requirements.txt  setup.py  urlmon.py
webhooks/: README.md
(+238 files in other folders)
